# insider-trading-tracker

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  render.yaml
docs/: architecture.md
src/insider_tracker/: app.py  config.py  db.py  models.py
src/insider_tracker/services/: market_calendar.py  openinsider.py  quotes.py  reference_data.py  sec.py  tracker.py
src/insider_tracker/web/static/: styles.css
src/insider_tracker/web/templates/: base.html  detail.html  index.html
tests/: test_market_calendar.py  test_openinsider.py  test_quotes.py  test_sec.py
